--- a/app.json
+++ b/app.json
@@ -1,95 +1,95 @@
 {
-  "name": "Friday-Userbot",
-  "description": "A Userbot Based On Telethon By @StarkXD",
-  "logo": "https://telegra.ph/file/b4e1e36c6b1fcb32dd997.jpg",
+  "name": "Dark-Userbot",
+  "description": "Ən güvənilən userbot",
+  "logo": "https://telegra.ph/file/f2de605e72efdb6e282d4.jpg",
   "keywords": [
     "telegram",
     "userbot",
     "plugin",
     "telegram-userbot",
-    "productivity"
+    "səmərəlilik"
   ],
-  "repository": "https://github.com/starkgang/FridayUserbot",
-  "website": "starkgang.ml",
-  "success_url": "t.me/FridayOT",
+  "repository": "https://github.com/DarkUserBot-Team/DarkRoot",
+  "website": "https://github.com/DarkUserBot-Team/DarkRoot",
+  "success_url": "https://github.com/DarkUserBot-Team/DarkRoot",
   "env": {
     "ENV": {
-      "description": "Setting this to ANYTHING will enable heroku.",
+      "description": "Buna HƏR ŞEY olaraq təyin etmək heroku-ya imkan veriləcək",
       "value": "ANYTHING"
     },
     "TEMP_DOWNLOAD_DIRECTORY": {
-      "description": "Where downloaded files will go.",
+      "description": "Endirilən faylların hara gedəcəyi.",
       "value": "./userbot/DOWNLOADS/",
       "required": false
     },
     "ALIVE_NAME": {
-      "description": "Enter Username Here ",
+      "description": "İstifadəçi adını buraya daxil edin",
       "value": ""
     },
     "APP_ID": {
-      "description": "Get this value from my.telegram.org! Please do not steal",
+      "description": "Bu dəyəri my.telegram.org saytından əldə edin!",
       "value": ""
     },
     "API_HASH": {
-      "description": "Get this value from my.telegram.org! Please do not steal",
+      "description": "Bu dəyəri my.telegram.org saytından əldə edin!",
       "value": ""
     },
     "PLUGIN_CHANNEL": {
-      "description": "Channel Where You Save Your Plugins",
+      "description": "Plugin saxladığınız kanal",
       "value": ""
     },
     "SUDO_USERS": {
-      "description": "Enter A User Id Which You Would Like to Use To Control Sudo. Don't Give Your Own ID Or ID Of Users You Don't Trust.",
+      "description": "Sudoya nəzarət etmək üçün istifadə etmək istədiyiniz istifadəçi nömrəsini daxil edin. ",
       "value": "",
       "required": false
     },
     "PRIVATE_GROUP_ID": {
-      "description": "A Group ID Where You Want Logging Feature",
+      "description": "Giriş xüsusiyyətini istədiyiniz bir qrup kimliyi",
       "value": ""
     },
     "STRING_SESSION": {
-      "description": "Get From Repl.run Or Run Locally",
+      "description": "Repl.run'dan alın və ya yerli olaraq çalıştırın",
       "value": ""
     },
     "GITHUB_ACCESS_TOKEN": {
-      "description": "Your Github Access Token for GitHub Commit Plugin. Google 'Github access token' to find more About It.",
+      "description": "GitHub Commit Plugin üçün Github Access Token. Yoxdusa boş saxlayın.",
       "value": "",
       "required": false
     },
     "GIT_REPO_NAME": {
-      "description": "Your repo name Example: Midhunkm1294/FridayUserbot, but GITHUB_ACCESS_TOKEN must be setup first.",
+      "description": "Repo adınız Nümunə: DarkUserBot-Team/DarkRoot, lakin əvvəl GITHUB_ACCESS_TOKEN qurulmalıdır.Yoxdursa boş saxlayın",
       "value": "",
       "required": false
     },
     "LYDIA_API_KEY": {
-      "description": "Needed for Lydia AI. Follow https://telegra.ph/Lydia-09-05 to get your API.",
+      "description": "Lydia APİ lazımdır.Yoxdursa boş saxlayın",
       "value": "",
       "required": false
     },
     "HEROKU_API_KEY": {
-      "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API.Required for updater to work.",
+      "description": "Https://dashboard.heroku.com/account ünvanına gedin, aşağıya fırladın və Reveal API düyməsini basın.Kopyaladığınızı buraya yapışdırın",
       "value": ""
     },
     "HEROKU_APP_NAME": {
-      "description": "The Value of App Name you filled in right on top.Required for updater to work.",
+      "description": "TƏn yuxarda app nameni burayada yazın.",
       "value": ""
     },
     "TG_BOT_TOKEN_BF_HER": {
-      "description": "Needed for inline buttons maker. Make a bot at @BotFather and get the token of your bot. Get it.",
+      "description": "@botfather gedin və bot yaradın.Api tokeni buraya yapışdıırın",
       "value": ""
     },
     "TG_BOT_USER_NAME_BF_HER": {
-      "description": "You Telegram Bot API Key Here. Needed For Help Module And Cbutton.",
+      "description": "Botunuzun adını buraya yazın",
       "value": ""
     },
     "DOWNLOAD_PFP_URL_CLOCK": {
-      "description": "Needed for autopic module. A url that is a preview link of your Profile Pic",
+      "description": "@vTelegraphBot buraya şəkil faylı atın sizə veriyi linki buraya yapışdırın",
       "value": "",
       "required": false
     },
     "TZ": {
-      "description": "Required for Correct Time on autopic",
-      "value": "Asia/Kolkata",
+      "description": ".autopic üçün saat ayarı",
+      "value": "Asia/Baku",
       "required": false
     }
   },
